# genomics

./: .gitignore  README.md  enrichment_in_COSMIC_var.py  enrichment_top_var.py  maf_gve_corr.py  process_vcf.py  pyproject.toml  pytest.ini  setup_environment.csh  setup_environment.sh  setup_genomic_env.csh  submit_training_jobs.csh  var_enrichment.py
configs/: example_chromdragonn.yml  example_danq.yml  example_deepsea.yml
docs/: framework_comparison.md  migration_guide.md
examples/: large_data_training_example.py  simple_training_example.py  uavarprior_integration_example.py
genomic_lightning/: __init__.py
genomic_lightning/callbacks/: genomic_callbacks.py
genomic_lightning/cli/: main.py
genomic_lightning/config/: factory.py  loader.py
genomic_lightning/data/: base.py  data_modules.py  genomic_datasets.py  sampler_adapter.py  sampler_data_module.py  sharded_data_module.py
genomic_lightning/lightning_modules/: base.py  chromdragonn.py  danq.py  deepsea.py
genomic_lightning/metrics/: __init__.py  genomic_metrics.py
genomic_lightning/models/: chromdragonn.py  danq.py  deepsea.py
genomic_lightning/utils/: legacy_import.py  model_conversion.py  prediction_utils.py  sampler_utils.py  wrapper_conversion.py
genomic_lightning/variant_analysis/: __init__.py  variant_effect.py
genomic_lightning/visualization/: __init__.py  motif_visualization.py
scripts/: convert_legacy_model.py  generate_sample_data.py  predict_variant_effects.py  train_danq_job.sbatch  train_genomic_job.sbatch  train_genomic_model.py
tests/data/: test_sharded_data_module.py
(+2 files in other folders)
